--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "clean-webpack-plugin": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
@@ -15,9 +16,8 @@
     "web-vitals": "^2.1.4",
     "webpack-merge": "^5.8.0"
   },
-  "proxy": "http://localhost:5000/api",
   "scripts": {
-    "start": "webpack server --config webpack.dev.js --hot --open",
+    "start": "webpack server --config webpack.dev.js --mode development --hot --open",
     "build": "webpack --config webpack.prod.js --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,6 +49,7 @@
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
